@@ -917,7 +917,7 @@ argument_list|()
 expr_stmt|;
 try|try
 block|{
-comment|// Currently, there is an implicit _version_=1 for updates (doc must exist).  This is subject to change!
+comment|// test that updating a non-existing doc fails if we set _version_=1
 name|version2
 operator|=
 name|addAndGetVersion
@@ -935,8 +935,12 @@ argument_list|(
 literal|"add"
 argument_list|,
 operator|-
-literal|100
+literal|101
 argument_list|)
+argument_list|,
+literal|"_version_"
+argument_list|,
+literal|"1"
 argument_list|)
 argument_list|,
 literal|null
@@ -963,6 +967,60 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+comment|// test that by default we can update a non-existing doc
+name|version
+operator|=
+name|addAndGetVersion
+argument_list|(
+name|sdoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"val_i"
+argument_list|,
+literal|102
+argument_list|,
+literal|"val_is"
+argument_list|,
+name|map
+argument_list|(
+literal|"add"
+argument_list|,
+operator|-
+literal|102
+argument_list|)
+argument_list|)
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|afterUpdate
+operator|.
+name|call
+argument_list|()
+expr_stmt|;
+name|assertJQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+literal|"/get"
+argument_list|,
+literal|"id"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"id,val*"
+argument_list|)
+argument_list|,
+literal|"=={'doc':{'id':'1', 'val_i':102, 'val_is':[-102]}}"
+argument_list|)
+expr_stmt|;
 name|version
 operator|=
 name|addAndGetVersion
